# Orchestry

./: .dockerignore  .env.docker.example  .env.example  .gitignore  404.html  LICENSE  README-Docker.md  README.md  arch.md  arch2.md  docker-compose.dev.yml  docker-compose.yml  index.html  mkdocs.yml  my-server.yml  pyproject.toml  requirements.txt  setup.sh  sitemap.xml  start-cluster.sh  start.sh  view_db.py  view_docker_db.py
.github/workflows/: docs.yml  python-package.yml
app_spec/: __init__.py  models.py
autoserve.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/: main.py  requirements.txt
cli_go/: go.mod  main.go
cli_go/helpers/: helpers.go
configs/: Dockerfile.controller  controller-lb.conf  nginx-main.conf  nginx_template_go.conf
configs/postgres/: pg_hba-primary.conf  pg_hba-replica.conf  setup-replica.sh  setup-replication-slot.sh
controller/: README.md  __init__.py  api.py  cluster.py  health.py  main.py  manager.py  nginx.py  scaler.py  state.py
controller/utils/: lifecycle.py  models.py
controller_go/: STATUS.md  api.go  cluster.go  go.mod  go.sum  health.go  lifecycle.go  manager.go  nginx.go  scaler.go  state_store.go
controller_go/cmd/: main.go
developer-guide/architecture/: index.html
developer-guide/components/: index.html
developer-guide/database/: index.html
developer-guide/development/: index.html
developer-guide/extensions/: index.html
developer-guide/health/: index.html
developer-guide/leader-election/: index.html
developer-guide/load-balancing/: index.html
developer-guide/scaling/: index.html
docker_configs/: Dockerfile.controller  nginx-main.conf  nginx_template.conf  pg_hba-replica.conf  postgres-init.sh  postgresql-primary.conf  postgresql-replica.conf
docs/: README.md  index.md
docs/developer-guide/: architecture.md  components.md  database.md  development.md  extensions.md  health.md  leader-election.md  load-balancing.md  scaling.md
docs/examples/: applications.md
docs/styles/: overrides.css
docs/user-guide/: api-reference.md  app-spec.md  cli-reference.md  configuration.md  quick-start.md  troubleshooting.md
examples/applications/: index.html
metrics/: __init__.py  exporter.py
search/: search_index.json
state/: __init__.py  db.py
state_go/: db.go  go.mod  models.go
test/: load_test.sh  my-manual-server.yml  my-server.yml
user-guide/api-reference/: index.html
user-guide/app-spec/: index.html
user-guide/cli-reference/: index.html
user-guide/configuration/: index.html
user-guide/quick-start/: index.html
user-guide/troubleshooting/: index.html
