[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoserve"
version = "1.0.0"
description = "AutoServe - Automatic scaling and load balancing for containerized applications"
authors = [{name = "Hemanth S Banur", email = "arjunbanur27@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.10",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "attrs==25.3.0",
    "babel==2.17.0",
    "backrefs==5.9",
    "build==1.3.0",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "cryptography==46.0.1",
    "docker==7.1.0",
    "docutils==0.22.2",
    "fastapi==0.115.5",
    "frozenlist==1.7.0",
    "ghp-import==2.1.0",
    "h11==0.16.0",
    "id==1.5.0",
    "idna==3.10",
    "jaraco.classes==3.4.0",
    "jaraco.context==6.0.1",
    "jaraco.functools==4.3.0",
    "jeepney==0.9.0",
    "Jinja2==3.1.4",
    "keyring==25.6.0",
    "Markdown==3.9",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "mergedeep==1.3.4",
    "more-itertools==10.8.0",
    "multidict==6.6.4",
    "nh3==0.3.0",
    "packaging==25.0",
    "paginate==0.5.7",
    "pathspec==0.12.1",
    "platformdirs==4.4.0",
    "propcache==0.3.2",
    "psutil==6.1.0",
    "psycopg2==2.9.10",
    "pycparser==2.23",
    "pydantic==2.10.3",
    "pydantic_core==2.27.1",
    "Pygments==2.19.2",
    "pymdown-extensions==10.16.1",
    "pyproject_hooks==1.2.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "PyYAML==6.0.2",
    "pyyaml_env_tag==1.1",
    "readme_renderer==44.0",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rfc3986==2.0.0",
    "rich==14.1.0",
    "SecretStorage==3.4.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.41.3",
    "typer==0.17.4",
    "typing-inspection==0.4.1",
    "typing_extensions==4.15.0",
    "urllib3==2.5.0",
    "uvicorn==0.32.1",
    "watchdog==6.0.0",
    "yarl==1.20.1"
]

[tool.setuptools]
packages = [
    "app_spec",
    "cli",
    "configs",
    "controller",
    "metrics",
    "state"
]

[project.scripts]
autoserve = "cli.main:app"

[project.urls]
Homepage = "https://arjuuuuunnnnn.github.io/AutoServe/"
Repository = "https://github.com/arjuuuuunnnnn/AutoServe"
